# nmrs

./: Cargo.toml
nmrs-gui/src/: lib.rs
nmrs-gui/src/ui/: bluetooth_devices.rs  header.rs  mod.rs
